<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="Home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/searchFragment"
        android:title="Search"
        android:icon="@drawable/ic_search"/>
    <item
        android:id="@+id/addPostFragment"
        android:title="Add Photo"
        android:icon="@drawable/ic_add_photo"/>
    <item
        android:id="@+id/notificationFragment"
        android:title="Notification"
        android:icon="@drawable/ic_bell"/>
    <item
        android:id="@+id/profileFragment"
        android:title="Profile"
        android:icon="@drawable/ic_profile"/>
</menu>