...
        <TextView
            android:id="@+id/tvNotificationUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat"
            android:text="ash"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/civNotificationImage"
            app:layout_constraintTop_toTopOf="parent" />

...
